# RAG

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  comparison_report.md  docker-compose.yml  pyproject.toml  requirements.txt  verification_report.md
apps/api/: main.py  settings.py  telemetry.py
apps/api/routers/: ask.py  ingest.py  search.py
apps/ui/: app.py
data/: bm25.pkl
rag/agent/: decomposer.py  runner.py  tools.py
rag/chunking/: splitter.py
rag/citations/: __init__.py  extractor.py  formatter.py  models.py  service.py  validator.py
rag/confidence/: __init__.py  service.py  signals.py
rag/embeddings/: service.py
rag/generation/: llm.py  service.py
rag/guardrails/: __init__.py  input_guards.py  models.py  output_guards.py  service.py
rag/ingestion/: loaders.py  models.py  service.py
rag/rerank/: service.py
rag/retrieval/: models.py  service.py
rag/sparse/: index.py
rag/vector_store/: qdrant.py
scripts/: build_bm25.py  check_qdrant.py  compare_rag.py  create_sample_pdf.py  debug_ingest.py  download_data.py  eval_large_dataset.py  eval_professional.py  eval_with_langfuse.py  preload_model.py  reingest_data.py  run_eval.py  sanity.py  start_mlx.sh  test_agent.py  test_citations.py  test_confidence.py  test_guardrails.py  verify_live_data.py  verify_rag_content.py  verify_system.py
tests/: conftest.py
tests/unit/: test_citations.py  test_confidence.py  test_guardrails.py
